# robotic-arm

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: README.md  accuracy_test.py  efficiency_test.py  latency_test.py  torque_test.py
benchmarks/data/: accuracy_sample.csv  efficiency_sample.csv  latency_sample.csv  torque_sample.csv
docs/research/: motor-cycloidal-sizing.md
firmware/: README.md
firmware/arm_controller/: arm_controller.ino
src/arm/: __init__.py  bridge.py  config.py  kinematics.py  torque.py
studio/: README.md  index.html
tests/: test_torque.py
thesis/: skripsi-outline.md
