[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robotic-arm"
version = "0.1.0"
description = "Kontrol, analisis & digital twin lengan robot 6-DOF 3D printed cycloidal"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ilyas (kutilz)" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyserial>=3.5",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
arm-torque = "arm.torque:print_report"
arm-bridge = "arm.bridge:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
